--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "inquirer": "^8.2.0"
+    "fs": "^0.0.1-security",
+    "inquirer": "^8.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "jest": "^27.4.7"
